--- a/bundlers/gulp/package.json
+++ b/bundlers/gulp/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/KozlovAleksandr/JS_advanced#readme",
   "devDependencies": {
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-sass": "^5.1.0",
+    "sass": "^1.54.8"
   }
 }
